# pegaflow

docs/: metrics.md  pd-rdma-push.md
examples/: bench_d2h_h2d.py
pegaflow-core/: Cargo.toml
pegaflow-core/benches/: cpu_path.rs
pegaflow-core/src/: block.rs  lib.rs  metrics.rs
pegaflow-core/src/backing/: rdma_fetch.rs
pegaflow-core/src/storage/: mod.rs  prefetch.rs  read_cache.rs  tier_attribution.rs  write_path.rs
pegaflow-core/tests/: engine_basic.rs  eviction.rs  prefetch_pin.rs  prefix_semantics.rs  ssd_cache.rs  tier_attribution.rs
pegaflow-core/tests/common/: harness.rs
pegaflow-proto/proto/: engine.proto
pegaflow-server/src/: lib.rs  service.rs
pegaflow-server/tests/: p2p_rdma.rs
pegaflow-server/tests/common/: mod.rs
pegaflow-transfer/: Cargo.toml  build.rs
pegaflow-transfer/src/: cuda_sys.rs  cudart_sys.rs  gdrapi_sys.rs  lib.rs
pegaflow-transfer/src/cuda_lib/: cumem.rs  driver.rs  error.rs  event.rs  gdr.rs  mem.rs  mod.rs  rt.rs
pegaflow-transfer/src/v2/: api.rs  cpu_affinity.rs  domain_group.rs  fabric_engine.rs  imm_count.rs  mod.rs  mr.rs  provider_dispatch.rs  topo.rs  transfer_engine.rs  transfer_engine_builder.rs  worker.rs
pegaflow-transfer/src/v2/verbs/: verbs_devinfo.rs  verbs_domain.rs  verbs_rdma_op.rs
python/: pyproject.toml
python/pegaflow/: pegaflow.pyi
python/pegaflow/connector/: __init__.py  common.py  scheduler.py  worker.py
python/pegaflow/pd_connector/: __init__.py  chunk_tracker.py  layout.py  metadata.py  oob.py  prefill.py  proxy.py  rdma.py  scheduler.py  worker.py
python/pegaflow/sglang/: peagflow_radix_cache.py
python/src/: lib.rs
python/tests/: README.md  conftest.py  test_combine_hashes.py  test_connector_fault_tolerance.py  test_engine_client.py  test_pd_connector.py  test_vllm_query_probe_stress.py  unit_stubs.py  vllm_helpers.py
scripts/: pd_rdma_binding_probe.py
